--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 TELEGRAM_TOKEN="XXX:XXX"
 ACCESS_TOKEN="XXX"
-CONFIG_PATH="./config/config.yaml"
+CONFIG_PATH="XXX/go/src/config/config.yaml"
+DATA_PATH="XXX/go/src/github.com/russellcxl/google-trends/data"
+REDIS_ADDRESS="localhost:6379"
+REDIS_PASSWORD=""
