--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
-TELEGRAM_TOKEN="XXX:XXX"
+TELEGRAM_TOKEN="XXX"
 ACCESS_TOKEN="XXX"
-CONFIG_PATH="XXX/go/src/config/config.yaml"
+CONFIG_PATH="XXX/go/src/github.com/russellcxl/google-trends/config/config.yaml"
 DATA_PATH="XXX/go/src/github.com/russellcxl/google-trends/data"
-REDIS_ADDRESS="localhost:6379"
+REDIS_HOST="localhost"
+REDIS_PORT="6379"
 REDIS_PASSWORD=""
